Fix z-index

--- a/src/sass/ItemInfoCard.scss
+++ b/src/sass/ItemInfoCard.scss
@@ -12,7 +12,7 @@
     top: 0;
     bottom: 0;
     background-color: variables.$light-1;
-    z-index: 3;
+    z-index: 99;
 
     &__main {
         display: flex;
